# Neural-networks-from-scratch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  format.sh
pkg/: CMakeLists.txt
pkg/AnyObject/: AnyMovable.cpp  AnyMovable.h  CMakeLists.txt
src/: CMakeLists.txt  LinearAlgebra.h  data_loader.cpp  data_loader.h  gradient.cpp  gradient.h  layer.cpp  layer.h  linear_layer.cpp  linear_layer.h  loss.cpp  loss.h  main.cpp  neural_network.cpp  neural_network.h  non_linear_layer.cpp  non_linear_layer.h  optimizer.cpp  optimizer.h
tests/: CMakeLists.txt
tests/MNIST/: CMakeLists.txt  mnist_data_loader.cpp  mnist_data_loader.h  test_mnist.cpp
tests/unit/: CMakeLists.txt  test_all.cpp  test_data_loader.cpp  test_layer.cpp  test_loss.cpp  test_network.cpp  test_optimizer.cpp  utils.cpp  utils.h
